# kiss_desktop

./: Cargo.toml  Dioxus.toml  README.md
public/: style.css
src/: main.rs  router.rs
src/api/: auth_api.rs  mod.rs
src/components/: mod.rs
src/components/group/: auth_form.rs
src/components/single/: btn.rs  input.rs  loader.rs  logo.rs  mod.rs  padding.rs
src/pages/: auth_page.rs  mod.rs  workspace_page.rs
src/state/: auth_state.rs  mod.rs
src/utils/: icon.rs  mod.rs  validate.rs
